--- a/diagnostics-inner.html
+++ b/diagnostics-inner.html
@@ -8,6 +8,11 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
       rel="stylesheet" />
+
+    <!-- Swiper styles -->
+    <link
+      rel="stylesheet"
+      href="./css/cdn.jsdelivr.net_npm_swiper@10.2.0_swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/diagnostics.css" />
     <title>Diagnostics</title>
   </head>
@@ -300,82 +305,153 @@
       </div>
     </div>
 
-    <div class="tool container">
+    <div class="tool container swiper">
       <h1 class="tool-title">ОБОРУДОВАНИЕ</h1>
-      <div class="items-wrapper">
-        <div class="item">
-          <div class="item-image">
-            <img src="./images/diagnostics/MRT.png" alt="MRT" />
+      <div class="slide-content mySwiper">
+        <div class="items-wrapper swiper-wrapper">
+
+          <div class="item swiper-slide">
+            <div class="item-image">
+              <img src="./images/diagnostics/MRT.png" alt="MRT" />
+            </div>
+            <h2 class="item-title">MPT</h2>
+            <ul class="item-facts">
+              <li>Модель: AQUILION LIGHTNING SP 80</li>
+              <li>Высокая точность результатов</li>
+              <li>Лучевая нагрузка снижена на 75%</li>
+              <li>Сканирование участка всего за 0,5 секунды</li>
+              <li>Изображения формата 3D в высоком разрешении</li>
+              <li>Подходит для грузных пациентов с массой тела до 220 кг</li>
+              <li>Максимально комфортная процедура</li>
+            </ul>
           </div>
-          <h2 class="item-title">MPT</h2>
-          <ul class="item-facts">
-            <li>Модель: AQUILION LIGHTNING SP 80</li>
-            <li>Высокая точность результатов</li>
-            <li>Лучевая нагрузка снижена на 75%</li>
-            <li>Сканирование участка всего за 0,5 секунды</li>
-            <li>Изображения формата 3D в высоком разрешении</li>
-            <li>Подходит для грузных пациентов с массой тела до 220 кг</li>
-            <li>Максимально комфортная процедура</li>
-          </ul>
-        </div>
-        <div class="item">
-          <div class="item-image">
-            <img src="./images/diagnostics/MSKT.png" alt="MSKT" />
+          <div class="item swiper-slide">
+            <div class="item-image">
+              <img src="./images/diagnostics/MSKT.png" alt="MSKT" />
+            </div>
+            <h2 class="item-title">MCKT</h2>
+            <ul class="item-facts">
+              <li>Модель: AQUILION LIGHTNING SP 80</li>
+              <li>Высокая точность результатов</li>
+              <li>Лучевая нагрузка снижена на 75%</li>
+              <li>Сканирование участка всего за 0,5 секунды</li>
+              <li>Изображения формата 3D в высоком разрешении</li>
+              <li>Подходит для грузных пациентов с массой тела до 220 кг</li>
+              <li>Максимально комфортная процедура</li>
+            </ul>
           </div>
-          <h2 class="item-title">MCKT</h2>
-          <ul class="item-facts">
-            <li>Модель: AQUILION LIGHTNING SP 80</li>
-            <li>Высокая точность результатов</li>
-            <li>Лучевая нагрузка снижена на 75%</li>
-            <li>Сканирование участка всего за 0,5 секунды</li>
-            <li>Изображения формата 3D в высоком разрешении</li>
-            <li>Подходит для грузных пациентов с массой тела до 220 кг</li>
-            <li>Максимально комфортная процедура</li>
-          </ul>
-        </div>
-        <div class="item">
-          <div class="item-image">
-            <img src="./images/diagnostics/UZD.png" alt="UZD" />
+          <div class="item swiper-slide">
+            <div class="item-image">
+              <img src="./images/diagnostics/UZD.png" alt="UZD" />
+            </div>
+            <h2 class="item-title">УЗИ/УЗД</h2>
+            <ul class="item-facts">
+              <li>Модель: AQUILION LIGHTNING SP 80</li>
+              <li>Высокая точность результатов</li>
+              <li>Лучевая нагрузка снижена на 75%</li>
+              <li>Сканирование участка всего за 0,5 секунды</li>
+              <li>Изображения формата 3D в высоком разрешении</li>
+              <li>Подходит для грузных пациентов с массой тела до 220 кг</li>
+              <li>Максимально комфортная процедура</li>
+            </ul>
           </div>
-          <h2 class="item-title">УЗИ/УЗД</h2>
-          <ul class="item-facts">
-            <li>Модель: AQUILION LIGHTNING SP 80</li>
-            <li>Высокая точность результатов</li>
-            <li>Лучевая нагрузка снижена на 75%</li>
-            <li>Сканирование участка всего за 0,5 секунды</li>
-            <li>Изображения формата 3D в высоком разрешении</li>
-            <li>Подходит для грузных пациентов с массой тела до 220 кг</li>
-            <li>Максимально комфортная процедура</li>
-          </ul>
+          <div class="item swiper-slide">
+            <div class="item-image">
+              <img src="./images/diagnostics/UZD.png" alt="UZD" />
+            </div>
+            <h2 class="item-title">УЗИ/УЗД</h2>
+            <ul class="item-facts">
+              <li>Модель: AQUILION LIGHTNING SP 80</li>
+              <li>Высокая точность результатов</li>
+              <li>Лучевая нагрузка снижена на 75%</li>
+              <li>Сканирование участка всего за 0,5 секунды</li>
+              <li>Изображения формата 3D в высоком разрешении</li>
+              <li>Подходит для грузных пациентов с массой тела до 220 кг</li>
+              <li>Максимально комфортная процедура</li>
+            </ul>
+          </div>
+          <div class="item swiper-slide">
+            <div class="item-image">
+              <img src="./images/diagnostics/UZD.png" alt="UZD" />
+            </div>
+            <h2 class="item-title">УЗИ/УЗД</h2>
+            <ul class="item-facts">
+              <li>Модель: AQUILION LIGHTNING SP 80</li>
+              <li>Высокая точность результатов</li>
+              <li>Лучевая нагрузка снижена на 75%</li>
+              <li>Сканирование участка всего за 0,5 секунды</li>
+              <li>Изображения формата 3D в высоком разрешении</li>
+              <li>Подходит для грузных пациентов с массой тела до 220 кг</li>
+              <li>Максимально комфортная процедура</li>
+            </ul>
+          </div>
+          <div class="item swiper-slide">
+            <div class="item-image">
+              <img src="./images/diagnostics/UZD.png" alt="UZD" />
+            </div>
+            <h2 class="item-title">УЗИ/УЗД</h2>
+            <ul class="item-facts">
+              <li>Модель: AQUILION LIGHTNING SP 80</li>
+              <li>Высокая точность результатов</li>
+              <li>Лучевая нагрузка снижена на 75%</li>
+              <li>Сканирование участка всего за 0,5 секунды</li>
+              <li>Изображения формата 3D в высоком разрешении</li>
+              <li>Подходит для грузных пациентов с массой тела до 220 кг</li>
+              <li>Максимально комфортная процедура</li>
+            </ul>
+          </div>
+          <div class="item swiper-slide">
+            <div class="item-image">
+              <img src="./images/diagnostics/UZD.png" alt="UZD" />
+            </div>
+            <h2 class="item-title">УЗИ/УЗД</h2>
+            <ul class="item-facts">
+              <li>Модель: AQUILION LIGHTNING SP 80</li>
+              <li>Высокая точность результатов</li>
+              <li>Лучевая нагрузка снижена на 75%</li>
+              <li>Сканирование участка всего за 0,5 секунды</li>
+              <li>Изображения формата 3D в высоком разрешении</li>
+              <li>Подходит для грузных пациентов с массой тела до 220 кг</li>
+              <li>Максимально комфортная процедура</li>
+            </ul>
+          </div>
+          <div class="item swiper-slide">
+            <div class="item-image">
+              <img src="./images/diagnostics/UZD.png" alt="UZD" />
+            </div>
+            <h2 class="item-title">УЗИ/УЗД</h2>
+            <ul class="item-facts">
+              <li>Модель: AQUILION LIGHTNING SP 80</li>
+              <li>Высокая точность результатов</li>
+              <li>Лучевая нагрузка снижена на 75%</li>
+              <li>Сканирование участка всего за 0,5 секунды</li>
+              <li>Изображения формата 3D в высоком разрешении</li>
+              <li>Подходит для грузных пациентов с массой тела до 220 кг</li>
+              <li>Максимально комфортная процедура</li>
+            </ul>
+          </div>
+          <div class="item swiper-slide">
+            <div class="item-image">
+              <img src="./images/diagnostics/UZD.png" alt="UZD" />
+            </div>
+            <h2 class="item-title">УЗИ/УЗД</h2>
+            <ul class="item-facts">
+              <li>Модель: AQUILION LIGHTNING SP 80</li>
+              <li>Высокая точность результатов</li>
+              <li>Лучевая нагрузка снижена на 75%</li>
+              <li>Сканирование участка всего за 0,5 секунды</li>
+              <li>Изображения формата 3D в высоком разрешении</li>
+              <li>Подходит для грузных пациентов с массой тела до 220 кг</li>
+              <li>Максимально комфортная процедура</li>
+            </ul>
+          </div>
         </div>
       </div>
       <div class="place-for-pagination">
-        <svg
-          width="14"
-          height="22"
-          viewBox="0 0 14 22"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg">
-          <path
-            id="Vector 2"
-            d="M12 2L3 11L12 20"
-            stroke="white"
-            stroke-width="3" />
-        </svg>
+        <div class="swiper-button-next"></div>
 
         <p>12 <span class="line"></span>19</p>
-        <svg
-          width="14"
-          height="22"
-          viewBox="0 0 14 22"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg">
-          <path
-            id="Vector 3"
-            d="M2 2L11 11L2 20"
-            stroke="white"
-            stroke-width="3" />
-        </svg>
+        <div class="swiper-button-prev"></div>
       </div>
     </div>
 
@@ -459,6 +535,10 @@
         alt="logo background" />
     </div>
 
+    <!-- swiper js -->
+    <script src="./js/cdn.jsdelivr.net_npm_swiper@10.2.0_swiper-bundle.min.js"></script>
+
+    <!-- javascript files -->
     <script src="./js/accardion.js"></script>
     <script src="./js/mobileMenu.js"></script>
     <script>
@@ -483,6 +563,34 @@
           diagnosticsPage.style.paddingTop = "0";
         }
       }
+
+
+      const swiper = new Swiper(".mySwiper", {
+        slidesPerView: 1,
+        spaceBetween: 30,
+        freeMode: true,
+        loop: true,
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true,
+        },
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+
+        breakpoints: {
+          500: {
+            slidesPerView: 1,
+          },
+          768: {
+            slidesPerView: 2,
+          },
+          1024: {
+            slidesPerView: 3,
+          },
+        },
+      });
     </script>
   </body>
 </html>
