--- a/sales.html
+++ b/sales.html
@@ -96,49 +96,72 @@
       <h1 class="page-title container">Акции</h1>
     </div>
 
-    <div class="sales-main__wrapper">
-      <div class="sales-main container">
-        <div class="main-content">
-          <h1 class="main-content__title">
-            Каждая пятница БЕСПЛАТНО проводим УЗИ одного органа
-          </h1>
-          <p class="main-content__text">
-            По всем направлением наши спецалисты готовы помочь и ответить на все
-            ваши вопросы
-          </p>
-          <div class="place-for-pagination">
-            <svg
-              width="14"
-              height="22"
-              viewBox="0 0 14 22"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path
-                id="Vector 2"
-                d="M12 2L3 11L12 20"
-                stroke="white"
-                stroke-width="3" />
-            </svg>
-
-            <p>12 <span class="line"></span>19</p>
-            <svg
-              width="14"
-              height="22"
-              viewBox="0 0 14 22"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path
-                id="Vector 3"
-                d="M2 2L11 11L2 20"
-                stroke="white"
-                stroke-width="3" />
-            </svg>
+    <div class="sales-main__wrapper swiper">
+      <div class="mySwiper-main container">
+        <div class="swiper-wrapper">
+          <div class="sales-main swiper-slide">
+            <div class="main-content">
+              <h1 class="main-content__title">
+                Каждая пятница БЕСПЛАТНО проводим УЗИ одного органа
+              </h1>
+              <p class="main-content__text">
+                По всем направлением наши спецалисты готовы помочь и ответить на
+                все ваши вопросы
+              </p>
+              <div class="place-for-pagination">
+                <div class="swiper-button-prev"></div>
+                <p>12 <span class="line"></span>19</p>
+                <div class="swiper-button-next"></div>
+              </div>
+            </div>
+            <div class="sales-main__image">
+              <img
+                src="./images/sales/sales-background.png"
+                alt="sales background" />
+            </div>
           </div>
-        </div>
-        <div class="sales-main__image">
-          <img
-            src="./images/sales/sales-background.png"
-            alt="sales background" />
+          <div class="sales-main swiper-slide container">
+            <div class="main-content">
+              <h1 class="main-content__title">
+                Каждая пятница БЕСПЛАТНО проводим УЗИ одного органа
+              </h1>
+              <p class="main-content__text">
+                По всем направлением наши спецалисты готовы помочь и ответить на
+                все ваши вопросы
+              </p>
+              <div class="place-for-pagination">
+                <div class="swiper-button-prev"></div>
+                <p>12 <span class="line"></span>19</p>
+                <div class="swiper-button-next"></div>
+              </div>
+            </div>
+            <div class="sales-main__image">
+              <img
+                src="./images/sales/sales-background.png"
+                alt="sales background" />
+            </div>
+          </div>
+          <div class="sales-main swiper-slide container">
+            <div class="main-content">
+              <h1 class="main-content__title">
+                Каждая пятница БЕСПЛАТНО проводим УЗИ одного органа
+              </h1>
+              <p class="main-content__text">
+                По всем направлением наши спецалисты готовы помочь и ответить на
+                все ваши вопросы
+              </p>
+              <div class="place-for-pagination">
+                <div class="swiper-button-prev"></div>
+                <p>12 <span class="line"></span>19</p>
+                <div class="swiper-button-next"></div>
+              </div>
+            </div>
+            <div class="sales-main__image">
+              <img
+                src="./images/sales/sales-background.png"
+                alt="sales background" />
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -538,7 +561,21 @@
         });
       });
 
-      const swiper = new Swiper(".mySwiper", {
+      const swiper1 = new Swiper(".mySwiper-main", {
+        slidesPerView: 1,
+        freeMode: true,
+        loop: true,
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true,
+        },
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+      });
+
+      const swiper2 = new Swiper(".mySwiper", {
         slidesPerView: 1,
         freeMode: true,
         loop: true,
