id removed from accordians

--- a/labaratory-inner.html
+++ b/labaratory-inner.html
@@ -111,7 +111,8 @@
     </div>
 
     <div class="accordion-wrapper container">
-      <div class="accordion" id="accordion">
+
+      <div class="accordion">
         <div class="accordion-header">
           <h1 class="accordion-header__title">Гомоцистеин</h1>
           <h2 class="accordion-header__price">350.000 сум</h2>
@@ -140,7 +141,7 @@
         </div>
       </div>
 
-      <div class="accordion" id="accordion">
+      <div class="accordion">
         <div class="accordion-header">
           <h1 class="accordion-header__title">Кортизол</h1>
           <h2 class="accordion-header__price">250.000 сум</h2>
@@ -169,7 +170,7 @@
         </div>
       </div>
 
-      <div class="accordion" id="accordion">
+      <div class="accordion">
         <div class="accordion-header">
           <h1 class="accordion-header__title">
             Адренокортикотропный гормон АКТГ
@@ -200,7 +201,7 @@
         </div>
       </div>
 
-      <div class="accordion" id="accordion">
+      <div class="accordion">
         <div class="accordion-header">
           <h1 class="accordion-header__title">Альдостерон</h1>
           <h2 class="accordion-header__price">250.000 сум</h2>
@@ -229,7 +230,7 @@
         </div>
       </div>
 
-      <div class="accordion" id="accordion">
+      <div class="accordion">
         <div class="accordion-header">
           <h1 class="accordion-header__title">HLA-B27</h1>
           <h2 class="accordion-header__price">250.000 сум</h2>
